frontal/overlays/clusterhub/productpage-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: productpage
  namespace: bookstore-kustomize
spec:
  host: productpage-kustomize.apps.hubcluster.mcmpoc.com
